# xde-theme

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.in  README  README.in  README.md  README.md.in  RELEASE.md  THANKS  TODO  autogen.sh  configure.ac  configure.sh  configure.template  example.pl  xde-startwm  xde-startwm-fluxbox  xde-style.c  xde-theme.c  xde.c  xde.h  xde.pc.in
WindowMaker/Styles/: Squared-blue.style  Squared-cadet.style  Squared-green.style  Unexicon.style
WindowMaker/Themes/Squared-blue.themed/: sbback.xpm  sbicon.xpm  sbtile.xpm
WindowMaker/Themes/Squared-cadet.themed/: scback.xpm  scicon.xpm  sctbar.xpm  sctile.xpm
WindowMaker/Themes/Squared-green.themed/: sgback.xpm  sgicon.xpm  sgtile.xpm
WindowMaker/Themes/Squared-grey.themed/: style  syback.xpm  syicon.xpm  sytbar.xpm  sytile.xpm
blackbox/styles/: Squared-blue  Squared-cadet  Squared-green  Squared-grey
ctwm/: apps  config  config.in  getstyles  getstyles.in  look  lookrc  menu  rc  rc.m4  rc.m4.in  rc2  setstyle  start.in  stylemenu  winmenu
ctwm/looks/Classic/: lookrc
ctwm/looks/Squared/: _lookrc
ctwm/looks/Squared-cadet/: lookrc
ctwm/styles/Classic/: stylerc
ctwm/styles/Squared/: _stylerc
ctwm/styles/Squared-blue/: lookrc
ctwm/styles/Squared-cadet/: lookrc
ctwm/styles/Squared-green/: stylerc
data/: Makefile.am
data/share/applications/: xde-watch.desktop
fluxbox/styles/Squared-blue/: theme.cfg
fluxbox/styles/Squared-cadet/: theme.cfg
fluxbox/styles/Squared-green/: theme.cfg
fluxbox/styles/Squared-grey/: theme.cfg
fvwm/: config.in  iconstyles  paths  rc  start.in  startup  styles
gtk/: Makefile.am
icewm/themes/Squared-blue/: Unexicon  closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm
icewm/themes/Squared-cadet/: closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm
icewm/themes/Squared-green/: closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  maximizeI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm
icewm/themes/Squared-grey/: closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm
jwm/: config.in  defaults  getstyles.in  groups  keys  menu  paths  rc  root  setstyle  start.in  style  tray
jwm/icons/: windows.xpm
jwm/styles/: Squared-blue  Squared-cadet  Squared-green  Squared-grey
jwm/styles/Squared-blue/: button-close.xpm  button-max-active.xpm  button-max.xpm  button-min.xpm  style
jwm/styles/Squared-cadet/: button-close.xpm  button-max-active.xpm  button-max.xpm  button-min.xpm  style
jwm/styles/Squared-green/: button-close.xpm  button-max-active.xpm  button-max.xpm  button-min.xpm  style
jwm/styles/Squared-grey/: button-close.xpm  button-max-active.xpm  button-max.xpm  button-min.xpm  style
man/: Makefile.am  xde-actions.pod  xde-backdrop.pod  xde-identify.pod  xde-menu.pod  xde-setbg.pod  xde-setwm.pod  xde-style.pod  xde-stylemon.pod  xde-theme.pod  xde-watch.pod
openbox/: Makefile.am
openbox/themes/Squared-blue/openbox-3/: bullet.xpm  close.xpm  close_disabled.xpm  close_hover.xpm  close_pressed.xpm  desk.xpm  desk_disabled.xpm  desk_hover.xpm  desk_pressed.xbm  desk_pressed.xpm  desk_toggled.xpm  desk_toggled_hover.xpm  desk_toggled_pressed.xpm  iconify.xpm  iconify_disabled.xpm  iconify_hover.xpm  iconify_pressed.xpm  max.xpm  max_disabled.xpm  max_hover.xbm  max_hover.xpm  max_pressed.xpm  max_toggled.xpm  max_toggled_hover.xpm  max_toggled_pressed.xpm  shade.xpm  shade_disabled.xpm  shade_hover.xpm  shade_pressed.xpm  shade_toggled.xpm  shade_toggled_hover.xpm  shade_toggled_pressed.xpm  themerc
openbox/themes/Squared-cadet/openbox-3/: max_hover.xbm  shade_toggled_pressed.xbm  themerc
openbox/themes/Squared-green/openbox-3/: desk_toggled.xbm  max_toggled_pressed.xbm  shade_pressed.xbm  shade_toggled_hover.xbm  themerc
openbox/themes/Squared-grey/openbox-3/: shade_hover.xbm  themerc
pekwm/themes/Squared-blue/: arrow_focused.xpm  arrow_selected.xpm  border_br.xpm  close_focused.xpm  close_hovered.xpm  close_pressed.xpm  close_unfocus.xpm  maximize_focused.xpm  maximize_hovered.xpm  maximize_pressed.xpm  maximize_unfocus.xpm  menu_focused.xpm  menu_hovered.xpm  menu_pressed.xpm  menu_unfocus.xpm  minimize_focused.xpm  minimize_hovered.xpm  minimize_pressed.xpm  minimize_unfocus.xpm  shade_focused.xpm  shade_hovered.xpm  shade_pressed.xpm  shade_unfocus.xpm  stick_focused.xpm  stick_hovered.xpm  stick_pressed.xpm  stick_unfocus.xpm  theme
pekwm/themes/Squared-cadet/: arrow_focused.xpm  arrow_selected.xpm  arrow_unfocus.xpm  border_lr.xpm  close_focused.xpm  close_hovered.xpm  theme  (+22 more)
src/: Makefile.am  xde-backdrop  xde-backdrop.c  xde-detect.c  xde-identify  xde-identify.c  xde-setbg.c  xde-setwm.c  xde-style.c  xde-stylemon.c  xde-theme.c  xde-watch.c  xde.VERSION  xde.c  xde.h  xde_2bwm.c  xde_adwm.c  xde_afterstep.c  xde_awesome.c  xde_blackbox.c  xde_ctwm.c  xde_cwm.c  xde_dtwm.c  xde_dwm.c  xde_echinus.c  xde_etwm.c  xde_fluxbox.c  xde_flwm.c  xde_fvwm.c  xde_icewm.c  xde_jwm.c  xde_matwm2.c  xde_metacity.c  xde_mwm.c  xde_openbox.c  xde_pekwm.c  xde_spectrwm.c  xde_twm.c  xde_uwm.c  xde_vtwm.c  (+5 more)
twm/: apps  config  config.in  feel  getstyles  getstyles.in  keys  look  lookrc  menu  rc.m4  rc.m4.in  setstyle  start.in  stylemenu  winmenu
vtwm/: buttons  config  config.in  defaults  feel  getstyles  getstyles.in  look  lookrc  menu  rc  rc.m4  rc.m4.in  setstyle  start.in  stylemenu  winmenu
(+341 files in other folders)
