
ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = nostdinc

dist_data_DATA =

dist_fluxboxstyles1_DATA = \
	fluxbox/styles/Squared-cadet/theme.cfg

dist_fluxboxpixmaps1_DATA = \
	fluxbox/styles/Squared-cadet/pixmaps/close_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/close_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/close.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/hilite_select.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/hilite_unselect.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/lhalf_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/lhalf_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/lhalf.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/max_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/max_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/max.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/menu_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/menu_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/menu.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/min_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/min_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/min.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/rhalf_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/rhalf_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/rhalf.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/select.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/shade_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/shade_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/shade.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/stick_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/stick_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/stick.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/stuck_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/stuck_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/stuck.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/toolbar_focused.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/toolbar_unfocused.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/unselect.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/unshade_pressed.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/unshade_unfocus.xpm \
	fluxbox/styles/Squared-cadet/pixmaps/unshade.xpm

dist_fluxboxstyles2_DATA = \
	fluxbox/styles/Squared-grey/theme.cfg

dist_fluxboxpixmaps2_DATA = \
	fluxbox/styles/Squared-grey/pixmaps/close_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/close_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/close.xpm \
	fluxbox/styles/Squared-grey/pixmaps/hilite_select.xpm \
	fluxbox/styles/Squared-grey/pixmaps/hilite_unselect.xpm \
	fluxbox/styles/Squared-grey/pixmaps/lhalf_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/lhalf_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/lhalf.xpm \
	fluxbox/styles/Squared-grey/pixmaps/max_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/max_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/max.xpm \
	fluxbox/styles/Squared-grey/pixmaps/menu_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/menu_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/menu.xpm \
	fluxbox/styles/Squared-grey/pixmaps/min_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/min_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/min.xpm \
	fluxbox/styles/Squared-grey/pixmaps/rhalf_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/rhalf_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/rhalf.xpm \
	fluxbox/styles/Squared-grey/pixmaps/select.xpm \
	fluxbox/styles/Squared-grey/pixmaps/shade_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/shade_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/shade.xpm \
	fluxbox/styles/Squared-grey/pixmaps/stick_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/stick_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/stick.xpm \
	fluxbox/styles/Squared-grey/pixmaps/stuck_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/stuck_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/stuck.xpm \
	fluxbox/styles/Squared-grey/pixmaps/toolbar_focused.xpm \
	fluxbox/styles/Squared-grey/pixmaps/toolbar_unfocused.xpm \
	fluxbox/styles/Squared-grey/pixmaps/unselect.xpm \
	fluxbox/styles/Squared-grey/pixmaps/unshade_pressed.xpm \
	fluxbox/styles/Squared-grey/pixmaps/unshade_unfocus.xpm \
	fluxbox/styles/Squared-grey/pixmaps/unshade.xpm

dist_fluxboxstyles3_DATA = \
	fluxbox/styles/Squared-green/theme.cfg

dist_fluxboxpixmaps3_DATA = \
	fluxbox/styles/Squared-green/pixmaps/close_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/close_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/close.xpm \
	fluxbox/styles/Squared-green/pixmaps/hilite_select.xpm \
	fluxbox/styles/Squared-green/pixmaps/hilite_unselect.xpm \
	fluxbox/styles/Squared-green/pixmaps/lhalf_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/lhalf_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/lhalf.xpm \
	fluxbox/styles/Squared-green/pixmaps/max_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/max_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/max.xpm \
	fluxbox/styles/Squared-green/pixmaps/menu_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/menu_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/menu.xpm \
	fluxbox/styles/Squared-green/pixmaps/min_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/min_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/min.xpm \
	fluxbox/styles/Squared-green/pixmaps/rhalf_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/rhalf_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/rhalf.xpm \
	fluxbox/styles/Squared-green/pixmaps/select.xpm \
	fluxbox/styles/Squared-green/pixmaps/shade_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/shade_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/shade.xpm \
	fluxbox/styles/Squared-green/pixmaps/stick_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/stick_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/stick.xpm \
	fluxbox/styles/Squared-green/pixmaps/stuck_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/stuck_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/stuck.xpm \
	fluxbox/styles/Squared-green/pixmaps/toolbar_focused.xpm \
	fluxbox/styles/Squared-green/pixmaps/toolbar_unfocused.xpm \
	fluxbox/styles/Squared-green/pixmaps/unselect.xpm \
	fluxbox/styles/Squared-green/pixmaps/unshade_pressed.xpm \
	fluxbox/styles/Squared-green/pixmaps/unshade_unfocus.xpm \
	fluxbox/styles/Squared-green/pixmaps/unshade.xpm

dist_fluxboxstyles4_DATA = \
	fluxbox/styles/Squared-blue/theme.cfg

dist_fluxboxpixmaps4_DATA = \
	fluxbox/styles/Squared-blue/pixmaps/close_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/close_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/close.xpm \
	fluxbox/styles/Squared-blue/pixmaps/hilite_select.xpm \
	fluxbox/styles/Squared-blue/pixmaps/hilite_unselect.xpm \
	fluxbox/styles/Squared-blue/pixmaps/lhalf_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/lhalf_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/lhalf.xpm \
	fluxbox/styles/Squared-blue/pixmaps/max_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/max_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/max.xpm \
	fluxbox/styles/Squared-blue/pixmaps/menu_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/menu_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/menu.xpm \
	fluxbox/styles/Squared-blue/pixmaps/min_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/min_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/min.xpm \
	fluxbox/styles/Squared-blue/pixmaps/rhalf_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/rhalf_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/rhalf.xpm \
	fluxbox/styles/Squared-blue/pixmaps/select.xpm \
	fluxbox/styles/Squared-blue/pixmaps/shade_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/shade_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/shade.xpm \
	fluxbox/styles/Squared-blue/pixmaps/stick_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/stick_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/stick.xpm \
	fluxbox/styles/Squared-blue/pixmaps/stuck_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/stuck_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/stuck.xpm \
	fluxbox/styles/Squared-blue/pixmaps/toolbar_focused.xpm \
	fluxbox/styles/Squared-blue/pixmaps/toolbar_unfocused.xpm \
	fluxbox/styles/Squared-blue/pixmaps/unselect.xpm \
	fluxbox/styles/Squared-blue/pixmaps/unshade_pressed.xpm \
	fluxbox/styles/Squared-blue/pixmaps/unshade_unfocus.xpm \
	fluxbox/styles/Squared-blue/pixmaps/unshade.xpm

dist_blackboxstyles_DATA = \
	blackbox/styles/Squared-cadet \
	blackbox/styles/Squared-grey \
	blackbox/styles/Squared-green \
	blackbox/styles/Squared-blue

dist_icewmthemes1_DATA = \
	icewm/themes/Squared-cadet/closeA.xpm \
	icewm/themes/Squared-cadet/closeI.xpm \
	icewm/themes/Squared-cadet/default.theme \
	icewm/themes/Squared-cadet/depthA.xpm \
	icewm/themes/Squared-cadet/depthI.xpm \
	icewm/themes/Squared-cadet/hideA.xpm \
	icewm/themes/Squared-cadet/hideI.xpm \
	icewm/themes/Squared-cadet/maximizeA.xpm \
	icewm/themes/Squared-cadet/maximizeI.xpm \
	icewm/themes/Squared-cadet/menuButtonA.xpm \
	icewm/themes/Squared-cadet/menuButtonI.xpm \
	icewm/themes/Squared-cadet/minimizeA.xpm \
	icewm/themes/Squared-cadet/minimizeI.xpm \
	icewm/themes/Squared-cadet/restoreA.xpm \
	icewm/themes/Squared-cadet/restoreI.xpm \
	icewm/themes/Squared-cadet/rolldownA.xpm \
	icewm/themes/Squared-cadet/rolldownI.xpm \
	icewm/themes/Squared-cadet/rollupA.xpm \
	icewm/themes/Squared-cadet/rollupI.xpm

dist_icewmthemes1tb_DATA = \
	icewm/themes/Squared-cadet/taskbar/desktop.xpm \
	icewm/themes/Squared-cadet/taskbar/start.xpm \
	icewm/themes/Squared-cadet/taskbar/windows.xpm

dist_icewmthemes2_DATA = \
	icewm/themes/Squared-grey/closeA.xpm \
	icewm/themes/Squared-grey/closeI.xpm \
	icewm/themes/Squared-grey/default.theme \
	icewm/themes/Squared-grey/depthA.xpm \
	icewm/themes/Squared-grey/depthI.xpm \
	icewm/themes/Squared-grey/hideA.xpm \
	icewm/themes/Squared-grey/hideI.xpm \
	icewm/themes/Squared-grey/maximizeA.xpm \
	icewm/themes/Squared-grey/maximizeI.xpm \
	icewm/themes/Squared-grey/menuButtonA.xpm \
	icewm/themes/Squared-grey/menuButtonI.xpm \
	icewm/themes/Squared-grey/minimizeA.xpm \
	icewm/themes/Squared-grey/minimizeI.xpm \
	icewm/themes/Squared-grey/restoreA.xpm \
	icewm/themes/Squared-grey/restoreI.xpm \
	icewm/themes/Squared-grey/rolldownA.xpm \
	icewm/themes/Squared-grey/rolldownI.xpm \
	icewm/themes/Squared-grey/rollupA.xpm \
	icewm/themes/Squared-grey/rollupI.xpm

dist_icewmthemes2tb_DATA = \
	icewm/themes/Squared-grey/taskbar/desktop.xpm \
	icewm/themes/Squared-grey/taskbar/start.xpm \
	icewm/themes/Squared-grey/taskbar/windows.xpm

dist_icewmthemes3_DATA = \
	icewm/themes/Squared-green/closeA.xpm \
	icewm/themes/Squared-green/closeI.xpm \
	icewm/themes/Squared-green/default.theme \
	icewm/themes/Squared-green/depthA.xpm \
	icewm/themes/Squared-green/depthI.xpm \
	icewm/themes/Squared-green/hideA.xpm \
	icewm/themes/Squared-green/hideI.xpm \
	icewm/themes/Squared-green/maximizeA.xpm \
	icewm/themes/Squared-green/maximizeI.xpm \
	icewm/themes/Squared-green/menuButtonA.xpm \
	icewm/themes/Squared-green/menuButtonI.xpm \
	icewm/themes/Squared-green/minimizeA.xpm \
	icewm/themes/Squared-green/minimizeI.xpm \
	icewm/themes/Squared-green/restoreA.xpm \
	icewm/themes/Squared-green/restoreI.xpm \
	icewm/themes/Squared-green/rolldownA.xpm \
	icewm/themes/Squared-green/rolldownI.xpm \
	icewm/themes/Squared-green/rollupA.xpm \
	icewm/themes/Squared-green/rollupI.xpm

dist_icewmthemes3tb_DATA = \
	icewm/themes/Squared-green/taskbar/desktop.xpm \
	icewm/themes/Squared-green/taskbar/start.xpm \
	icewm/themes/Squared-green/taskbar/windows.xpm

dist_icewmthemes4_DATA = \
	icewm/themes/Squared-blue/closeA.xpm \
	icewm/themes/Squared-blue/closeI.xpm \
	icewm/themes/Squared-blue/default.theme \
	icewm/themes/Squared-blue/depthA.xpm \
	icewm/themes/Squared-blue/depthI.xpm \
	icewm/themes/Squared-blue/hideA.xpm \
	icewm/themes/Squared-blue/hideI.xpm \
	icewm/themes/Squared-blue/maximizeA.xpm \
	icewm/themes/Squared-blue/maximizeI.xpm \
	icewm/themes/Squared-blue/menuButtonA.xpm \
	icewm/themes/Squared-blue/menuButtonI.xpm \
	icewm/themes/Squared-blue/minimizeA.xpm \
	icewm/themes/Squared-blue/minimizeI.xpm \
	icewm/themes/Squared-blue/restoreA.xpm \
	icewm/themes/Squared-blue/restoreI.xpm \
	icewm/themes/Squared-blue/rolldownA.xpm \
	icewm/themes/Squared-blue/rolldownI.xpm \
	icewm/themes/Squared-blue/rollupA.xpm \
	icewm/themes/Squared-blue/rollupI.xpm

dist_icewmthemes4tb_DATA = \
	icewm/themes/Squared-blue/taskbar/desktop.xpm \
	icewm/themes/Squared-blue/taskbar/start.xpm \
	icewm/themes/Squared-blue/taskbar/windows.xpm


dist_openboxthemes1_DATA = \
	openbox/themes/Squared-cadet/openbox-3/bullet.xbm \
	openbox/themes/Squared-cadet/openbox-3/close_disabled.xbm \
	openbox/themes/Squared-cadet/openbox-3/close_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/close_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/close.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk_disabled.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk_toggled_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk_toggled_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk_toggled.xbm \
	openbox/themes/Squared-cadet/openbox-3/desk.xbm \
	openbox/themes/Squared-cadet/openbox-3/iconify_disabled.xbm \
	openbox/themes/Squared-cadet/openbox-3/iconify_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/iconify_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/iconify.xbm \
	openbox/themes/Squared-cadet/openbox-3/max_disabled.xbm \
	openbox/themes/Squared-cadet/openbox-3/max_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/max_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/max_toggled_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/max_toggled_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/max_toggled.xbm \
	openbox/themes/Squared-cadet/openbox-3/max.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade_disabled.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade_toggled_hover.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade_toggled_pressed.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade_toggled.xbm \
	openbox/themes/Squared-cadet/openbox-3/shade.xbm \
	openbox/themes/Squared-cadet/openbox-3/themerc

dist_openboxthemes2_DATA = \
	openbox/themes/Squared-grey/openbox-3/bullet.xbm \
	openbox/themes/Squared-grey/openbox-3/close_disabled.xbm \
	openbox/themes/Squared-grey/openbox-3/close_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/close_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/close.xbm \
	openbox/themes/Squared-grey/openbox-3/desk_disabled.xbm \
	openbox/themes/Squared-grey/openbox-3/desk_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/desk_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/desk_toggled_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/desk_toggled_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/desk_toggled.xbm \
	openbox/themes/Squared-grey/openbox-3/desk.xbm \
	openbox/themes/Squared-grey/openbox-3/iconify_disabled.xbm \
	openbox/themes/Squared-grey/openbox-3/iconify_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/iconify_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/iconify.xbm \
	openbox/themes/Squared-grey/openbox-3/max_disabled.xbm \
	openbox/themes/Squared-grey/openbox-3/max_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/max_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/max_toggled_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/max_toggled_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/max_toggled.xbm \
	openbox/themes/Squared-grey/openbox-3/max.xbm \
	openbox/themes/Squared-grey/openbox-3/shade_disabled.xbm \
	openbox/themes/Squared-grey/openbox-3/shade_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/shade_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/shade_toggled_hover.xbm \
	openbox/themes/Squared-grey/openbox-3/shade_toggled_pressed.xbm \
	openbox/themes/Squared-grey/openbox-3/shade_toggled.xbm \
	openbox/themes/Squared-grey/openbox-3/shade.xbm \
	openbox/themes/Squared-grey/openbox-3/themerc

dist_openboxthemes3_DATA = \
	openbox/themes/Squared-green/openbox-3/bullet.xbm \
	openbox/themes/Squared-green/openbox-3/close_disabled.xbm \
	openbox/themes/Squared-green/openbox-3/close_hover.xbm \
	openbox/themes/Squared-green/openbox-3/close_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/close.xbm \
	openbox/themes/Squared-green/openbox-3/desk_disabled.xbm \
	openbox/themes/Squared-green/openbox-3/desk_hover.xbm \
	openbox/themes/Squared-green/openbox-3/desk_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/desk_toggled_hover.xbm \
	openbox/themes/Squared-green/openbox-3/desk_toggled_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/desk_toggled.xbm \
	openbox/themes/Squared-green/openbox-3/desk.xbm \
	openbox/themes/Squared-green/openbox-3/iconify_disabled.xbm \
	openbox/themes/Squared-green/openbox-3/iconify_hover.xbm \
	openbox/themes/Squared-green/openbox-3/iconify_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/iconify.xbm \
	openbox/themes/Squared-green/openbox-3/max_disabled.xbm \
	openbox/themes/Squared-green/openbox-3/max_hover.xbm \
	openbox/themes/Squared-green/openbox-3/max_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/max_toggled_hover.xbm \
	openbox/themes/Squared-green/openbox-3/max_toggled_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/max_toggled.xbm \
	openbox/themes/Squared-green/openbox-3/max.xbm \
	openbox/themes/Squared-green/openbox-3/shade_disabled.xbm \
	openbox/themes/Squared-green/openbox-3/shade_hover.xbm \
	openbox/themes/Squared-green/openbox-3/shade_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/shade_toggled_hover.xbm \
	openbox/themes/Squared-green/openbox-3/shade_toggled_pressed.xbm \
	openbox/themes/Squared-green/openbox-3/shade_toggled.xbm \
	openbox/themes/Squared-green/openbox-3/shade.xbm \
	openbox/themes/Squared-green/openbox-3/themerc

dist_openboxthemes4_DATA = \
	openbox/themes/Squared-blue/openbox-3/bullet.xbm \
	openbox/themes/Squared-blue/openbox-3/close_disabled.xbm \
	openbox/themes/Squared-blue/openbox-3/close_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/close_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/close.xbm \
	openbox/themes/Squared-blue/openbox-3/desk_disabled.xbm \
	openbox/themes/Squared-blue/openbox-3/desk_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/desk_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/desk_toggled_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/desk_toggled_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/desk_toggled.xbm \
	openbox/themes/Squared-blue/openbox-3/desk.xbm \
	openbox/themes/Squared-blue/openbox-3/iconify_disabled.xbm \
	openbox/themes/Squared-blue/openbox-3/iconify_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/iconify_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/iconify.xbm \
	openbox/themes/Squared-blue/openbox-3/max_disabled.xbm \
	openbox/themes/Squared-blue/openbox-3/max_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/max_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/max_toggled_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/max_toggled_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/max_toggled.xbm \
	openbox/themes/Squared-blue/openbox-3/max.xbm \
	openbox/themes/Squared-blue/openbox-3/shade_disabled.xbm \
	openbox/themes/Squared-blue/openbox-3/shade_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/shade_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/shade_toggled_hover.xbm \
	openbox/themes/Squared-blue/openbox-3/shade_toggled_pressed.xbm \
	openbox/themes/Squared-blue/openbox-3/shade_toggled.xbm \
	openbox/themes/Squared-blue/openbox-3/shade.xbm \
	openbox/themes/Squared-blue/openbox-3/themerc

dist_wmakerstyles_DATA = \
	WindowMaker/Styles/Squared-cadet.style \
	WindowMaker/Styles/Squared-grey.style \
	WindowMaker/Styles/Squared-green.style \
	WindowMaker/Styles/Squared-blue.style

#dist_wmakertheme1_DATA = \
#	WindowMaker/Themes/Squared-cadet.themed/style \
#	WindowMaker/Themes/Squared-cadet.themed/scback.xpm \
#	WindowMaker/Themes/Squared-cadet.themed/scicon.xpm \
#	WindowMaker/Themes/Squared-cadet.themed/sctbar.xpm \
#	WindowMaker/Themes/Squared-cadet.themed/sctile.xpm
#
#dist_wmakertheme2_DATA = \
#	WindowMaker/Themes/Squared-grey.themed/style \
#	WindowMaker/Themes/Squared-grey.themed/syback.xpm \
#	WindowMaker/Themes/Squared-grey.themed/syicon.xpm \
#	WindowMaker/Themes/Squared-grey.themed/sytbar.xpm \
#	WindowMaker/Themes/Squared-grey.themed/sytile.xpm
#
#dist_wmakertheme3_DATA = \
#	WindowMaker/Themes/Squared-green.themed/style \
#	WindowMaker/Themes/Squared-green.themed/sgback.xpm \
#	WindowMaker/Themes/Squared-green.themed/sgicon.xpm \
#	WindowMaker/Themes/Squared-green.themed/sgtbar.xpm \
#	WindowMaker/Themes/Squared-green.themed/sgtile.xpm
#
#dist_wmakertheme4_DATA = \
#	WindowMaker/Themes/Squared-blue.themed/style \
#	WindowMaker/Themes/Squared-blue.themed/sbback.xpm \
#	WindowMaker/Themes/Squared-blue.themed/sbicon.xpm \
#	WindowMaker/Themes/Squared-blue.themed/sbtbar.xpm \
#	WindowMaker/Themes/Squared-blue.themed/sbtile.xpm

dist_wmakerpixmaps_DATA = \
	WindowMaker/Themes/Squared-cadet.themed/scback.xpm \
	WindowMaker/Themes/Squared-cadet.themed/scicon.xpm \
	WindowMaker/Themes/Squared-cadet.themed/sctbar.xpm \
	WindowMaker/Themes/Squared-cadet.themed/sctile.xpm \
	WindowMaker/Themes/Squared-grey.themed/syback.xpm \
	WindowMaker/Themes/Squared-grey.themed/syicon.xpm \
	WindowMaker/Themes/Squared-grey.themed/sytbar.xpm \
	WindowMaker/Themes/Squared-grey.themed/sytile.xpm \
	WindowMaker/Themes/Squared-green.themed/sgback.xpm \
	WindowMaker/Themes/Squared-green.themed/sgicon.xpm \
	WindowMaker/Themes/Squared-green.themed/sgtbar.xpm \
	WindowMaker/Themes/Squared-green.themed/sgtile.xpm \
	WindowMaker/Themes/Squared-blue.themed/sbback.xpm \
	WindowMaker/Themes/Squared-blue.themed/sbicon.xpm \
	WindowMaker/Themes/Squared-blue.themed/sbtbar.xpm \
	WindowMaker/Themes/Squared-blue.themed/sbtile.xpm

dist_gtkthemes1_DATA = \
	gtk/themes/Squared-cadet/gtk-2.0/gtkrc

dist_gtkthemes2_DATA = \
	gtk/themes/Squared-grey/gtk-2.0/gtkrc

dist_gtkthemes3_DATA = \
	gtk/themes/Squared-green/gtk-2.0/gtkrc

dist_gtkthemes4_DATA = \
	gtk/themes/Squared-blue/gtk-2.0/gtkrc

dist_jwm_SCRIPTS = \
	jwm/setstyle

dist_jwmstyles_DATA = \
	jwm/styles/Squared-blue \
	jwm/styles/Squared-cadet \
	jwm/styles/Squared-green \
	jwm/styles/Squared-grey

dist_jwmicon_DATA = \
	jwm/icons/window-above.xpm \
	jwm/icons/window-below.xpm \
	jwm/icons/window-border.xpm \
	jwm/icons/window-close.xpm \
	jwm/icons/window-command.xpm \
	jwm/icons/window-focus.xpm \
	jwm/icons/window-kill.xpm \
	jwm/icons/window-lower.xpm \
	jwm/icons/window-maximize-b.xpm \
	jwm/icons/window-maximize-h.xpm \
	jwm/icons/window-maximize-v.xpm \
	jwm/icons/window-maximize.xpm \
	jwm/icons/window-menu.xpm \
	jwm/icons/window-minimize.xpm \
	jwm/icons/window-move.xpm \
	jwm/icons/window-raise.xpm \
	jwm/icons/window-resize.xpm \
	jwm/icons/window-sendto.xpm \
	jwm/icons/window-shade.xpm \
	jwm/icons/window-snap.xpm \
	jwm/icons/window-stick.xpm \
	jwm/icons/window-titlebar.xpm \
	jwm/icons/window-unshade.xpm

dist_pekwmicons_DATA = \
	pekwm/icons/window-above.xpm \
	pekwm/icons/window-below.xpm \
	pekwm/icons/window-border.xpm \
	pekwm/icons/window-close.xpm \
	pekwm/icons/window-command.xpm \
	pekwm/icons/window-focus.xpm \
	pekwm/icons/window-kill.xpm \
	pekwm/icons/window-lower.xpm \
	pekwm/icons/window-maximize-b.xpm \
	pekwm/icons/window-maximize-h.xpm \
	pekwm/icons/window-maximize-v.xpm \
	pekwm/icons/window-maximize.xpm \
	pekwm/icons/window-menu.xpm \
	pekwm/icons/window-minimize.xpm \
	pekwm/icons/window-move.xpm \
	pekwm/icons/window-raise.xpm \
	pekwm/icons/window-resize.xpm \
	pekwm/icons/window-sendto.xpm \
	pekwm/icons/window-shade.xpm \
	pekwm/icons/window-snap.xpm \
	pekwm/icons/window-stick.xpm \
	pekwm/icons/window-titlebar.xpm \
	pekwm/icons/window-unshade.xpm

dist_pekwmthemes1_DATA = \
	pekwm/themes/Squared-cadet/arrow_focused.xpm \
	pekwm/themes/Squared-cadet/arrow_selected.xpm \
	pekwm/themes/Squared-cadet/arrow_unfocus.xpm \
	pekwm/themes/Squared-cadet/border_bl.xpm \
	pekwm/themes/Squared-cadet/border_br.xpm \
	pekwm/themes/Squared-cadet/border_b.xpm \
	pekwm/themes/Squared-cadet/border_lr.xpm \
	pekwm/themes/Squared-cadet/close_focused.xpm \
	pekwm/themes/Squared-cadet/close_hovered.xpm \
	pekwm/themes/Squared-cadet/close_pressed.xpm \
	pekwm/themes/Squared-cadet/close_unfocus.xpm \
	pekwm/themes/Squared-cadet/maximize_focused.xpm \
	pekwm/themes/Squared-cadet/maximize_hovered.xpm \
	pekwm/themes/Squared-cadet/maximize_pressed.xpm \
	pekwm/themes/Squared-cadet/maximize_unfocus.xpm \
	pekwm/themes/Squared-cadet/menu_focused.xpm \
	pekwm/themes/Squared-cadet/menu_hovered.xpm \
	pekwm/themes/Squared-cadet/menu_pressed.xpm \
	pekwm/themes/Squared-cadet/menu_unfocus.xpm \
	pekwm/themes/Squared-cadet/minimize_focused.xpm \
	pekwm/themes/Squared-cadet/minimize_hovered.xpm \
	pekwm/themes/Squared-cadet/minimize_pressed.xpm \
	pekwm/themes/Squared-cadet/minimize_unfocus.xpm \
	pekwm/themes/Squared-cadet/separator.xpm \
	pekwm/themes/Squared-cadet/shade_focused.xpm \
	pekwm/themes/Squared-cadet/shade_hovered.xpm \
	pekwm/themes/Squared-cadet/shade_pressed.xpm \
	pekwm/themes/Squared-cadet/shade_unfocus.xpm \
	pekwm/themes/Squared-cadet/stick_focused.xpm \
	pekwm/themes/Squared-cadet/stick_hovered.xpm \
	pekwm/themes/Squared-cadet/stick_pressed.xpm \
	pekwm/themes/Squared-cadet/stick_unfocus.xpm \
	pekwm/themes/Squared-cadet/tab_separator.xpm \
	pekwm/themes/Squared-cadet/theme

dist_pekwmthemes2_DATA = \
	pekwm/themes/Squared-grey/arrow_focused.xpm \
	pekwm/themes/Squared-grey/arrow_selected.xpm \
	pekwm/themes/Squared-grey/arrow_unfocus.xpm \
	pekwm/themes/Squared-grey/border_bl.xpm \
	pekwm/themes/Squared-grey/border_br.xpm \
	pekwm/themes/Squared-grey/border_b.xpm \
	pekwm/themes/Squared-grey/border_lr.xpm \
	pekwm/themes/Squared-grey/close_focused.xpm \
	pekwm/themes/Squared-grey/close_hovered.xpm \
	pekwm/themes/Squared-grey/close_pressed.xpm \
	pekwm/themes/Squared-grey/close_unfocus.xpm \
	pekwm/themes/Squared-grey/maximize_focused.xpm \
	pekwm/themes/Squared-grey/maximize_hovered.xpm \
	pekwm/themes/Squared-grey/maximize_pressed.xpm \
	pekwm/themes/Squared-grey/maximize_unfocus.xpm \
	pekwm/themes/Squared-grey/menu_focused.xpm \
	pekwm/themes/Squared-grey/menu_hovered.xpm \
	pekwm/themes/Squared-grey/menu_pressed.xpm \
	pekwm/themes/Squared-grey/menu_unfocus.xpm \
	pekwm/themes/Squared-grey/minimize_focused.xpm \
	pekwm/themes/Squared-grey/minimize_hovered.xpm \
	pekwm/themes/Squared-grey/minimize_pressed.xpm \
	pekwm/themes/Squared-grey/minimize_unfocus.xpm \
	pekwm/themes/Squared-grey/separator.xpm \
	pekwm/themes/Squared-grey/shade_focused.xpm \
	pekwm/themes/Squared-grey/shade_hovered.xpm \
	pekwm/themes/Squared-grey/shade_pressed.xpm \
	pekwm/themes/Squared-grey/shade_unfocus.xpm \
	pekwm/themes/Squared-grey/stick_focused.xpm \
	pekwm/themes/Squared-grey/stick_hovered.xpm \
	pekwm/themes/Squared-grey/stick_pressed.xpm \
	pekwm/themes/Squared-grey/stick_unfocus.xpm \
	pekwm/themes/Squared-grey/tab_separator.xpm \
	pekwm/themes/Squared-grey/theme

dist_pekwmthemes3_DATA = \
	pekwm/themes/Squared-green/arrow_focused.xpm \
	pekwm/themes/Squared-green/arrow_selected.xpm \
	pekwm/themes/Squared-green/arrow_unfocus.xpm \
	pekwm/themes/Squared-green/border_bl.xpm \
	pekwm/themes/Squared-green/border_br.xpm \
	pekwm/themes/Squared-green/border_b.xpm \
	pekwm/themes/Squared-green/border_lr.xpm \
	pekwm/themes/Squared-green/close_focused.xpm \
	pekwm/themes/Squared-green/close_hovered.xpm \
	pekwm/themes/Squared-green/close_pressed.xpm \
	pekwm/themes/Squared-green/close_unfocus.xpm \
	pekwm/themes/Squared-green/maximize_focused.xpm \
	pekwm/themes/Squared-green/maximize_hovered.xpm \
	pekwm/themes/Squared-green/maximize_pressed.xpm \
	pekwm/themes/Squared-green/maximize_unfocus.xpm \
	pekwm/themes/Squared-green/menu_focused.xpm \
	pekwm/themes/Squared-green/menu_hovered.xpm \
	pekwm/themes/Squared-green/menu_pressed.xpm \
	pekwm/themes/Squared-green/menu_unfocus.xpm \
	pekwm/themes/Squared-green/minimize_focused.xpm \
	pekwm/themes/Squared-green/minimize_hovered.xpm \
	pekwm/themes/Squared-green/minimize_pressed.xpm \
	pekwm/themes/Squared-green/minimize_unfocus.xpm \
	pekwm/themes/Squared-green/separator.xpm \
	pekwm/themes/Squared-green/shade_focused.xpm \
	pekwm/themes/Squared-green/shade_hovered.xpm \
	pekwm/themes/Squared-green/shade_pressed.xpm \
	pekwm/themes/Squared-green/shade_unfocus.xpm \
	pekwm/themes/Squared-green/stick_focused.xpm \
	pekwm/themes/Squared-green/stick_hovered.xpm \
	pekwm/themes/Squared-green/stick_pressed.xpm \
	pekwm/themes/Squared-green/stick_unfocus.xpm \
	pekwm/themes/Squared-green/tab_separator.xpm \
	pekwm/themes/Squared-green/theme

dist_pekwmthemes4_DATA = \
	pekwm/themes/Squared-blue/arrow_focused.xpm \
	pekwm/themes/Squared-blue/arrow_selected.xpm \
	pekwm/themes/Squared-blue/arrow_unfocus.xpm \
	pekwm/themes/Squared-blue/border_bl.xpm \
	pekwm/themes/Squared-blue/border_br.xpm \
	pekwm/themes/Squared-blue/border_b.xpm \
	pekwm/themes/Squared-blue/border_lr.xpm \
	pekwm/themes/Squared-blue/close_focused.xpm \
	pekwm/themes/Squared-blue/close_hovered.xpm \
	pekwm/themes/Squared-blue/close_pressed.xpm \
	pekwm/themes/Squared-blue/close_unfocus.xpm \
	pekwm/themes/Squared-blue/maximize_focused.xpm \
	pekwm/themes/Squared-blue/maximize_hovered.xpm \
	pekwm/themes/Squared-blue/maximize_pressed.xpm \
	pekwm/themes/Squared-blue/maximize_unfocus.xpm \
	pekwm/themes/Squared-blue/menu_focused.xpm \
	pekwm/themes/Squared-blue/menu_hovered.xpm \
	pekwm/themes/Squared-blue/menu_pressed.xpm \
	pekwm/themes/Squared-blue/menu_unfocus.xpm \
	pekwm/themes/Squared-blue/minimize_focused.xpm \
	pekwm/themes/Squared-blue/minimize_hovered.xpm \
	pekwm/themes/Squared-blue/minimize_pressed.xpm \
	pekwm/themes/Squared-blue/minimize_unfocus.xpm \
	pekwm/themes/Squared-blue/separator.xpm \
	pekwm/themes/Squared-blue/shade_focused.xpm \
	pekwm/themes/Squared-blue/shade_hovered.xpm \
	pekwm/themes/Squared-blue/shade_pressed.xpm \
	pekwm/themes/Squared-blue/shade_unfocus.xpm \
	pekwm/themes/Squared-blue/stick_focused.xpm \
	pekwm/themes/Squared-blue/stick_hovered.xpm \
	pekwm/themes/Squared-blue/stick_pressed.xpm \
	pekwm/themes/Squared-blue/stick_unfocus.xpm \
	pekwm/themes/Squared-blue/tab_separator.xpm \
	pekwm/themes/Squared-blue/theme

